Updating addsurvey.css to fix spacing for Add Survey file input

--- a/react-frontend/src/styles/addsurvey.css
+++ b/react-frontend/src/styles/addsurvey.css
@@ -31,7 +31,8 @@ h2.add-survey--main-title {
   gap: 10px;
 }
 
-label.add-survey--label {
+label.add-survey--label,
+label.add-survey--file-label {
   color: #225cb5;
   display: flex;
   flex-direction: column;
@@ -42,11 +43,15 @@ label.add-survey--label {
   width: 100%;
 }
 
-label.add-survey--label input {
+label.add-survey--label input,
+label.add-survey--file-label input {
   border: solid 1.5px #225cb5;
   border-radius: 5px;
   color: #000;
   font-size: 16px;
+}
+
+label.add-survey--label input {
   padding: 10px;
 }
 
@@ -55,17 +60,17 @@ input.add-survey-input-error {
   border: 1.5px solid #af0e0e !important;
 }
 
-label.add-survey--label input::file-selector-button {
+label.add-survey--file-label input::file-selector-button {
   background-color: #225cb5;
   border: solid 1.5px #225cb5;
   color: #fff;
   cursor: pointer;
   font-weight: 600;
-  margin: -10px 10px -10px -10px;
+  margin-right: 10px;
   padding: 10px;
 }
 
-label.add-survey--label input.add-survey-input-error::file-selector-button {
+label.add-survey--file-label input.add-survey-input-error::file-selector-button {
   background-color: #af0e0e !important;
   border: solid 1.5px #af0e0e !important;
 }
